--- a/source/stylesheets/_icon-font.scss
+++ b/source/stylesheets/_icon-font.scss
@@ -1,39 +1,40 @@
 @font-face {
-   font-family: 'slate';
-   src:
-      url('../fonts/slate.woff2?-syv14m') format('woff2'),
-      url('../fonts/slate.woff?-syv14m')  format('woff'),
-      url('../fonts/slate.ttf?-syv14m')   format('truetype');
-   font-weight: normal;
-   font-style: normal;
-   }
+	font-family: 'slate';
+	src: url('../fonts/slate.woff2?-syv14m') format('woff2'),
+		url('../fonts/slate.woff?-syv14m') format('woff'),
+		url('../fonts/slate.ttf?-syv14m') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 
 %icon {
-   font-family: 'slate';
-   speak: none;
-   font-style: normal;
-   font-weight: normal;
-   font-variant: normal;
-   text-transform: none;
-   line-height: 1;
-   }
+	font-family: 'slate';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+}
 
 %icon-exclamation-sign {
-   @extend %icon;
-   content: "\e600";
-   }
+	@extend %icon;
+	content: '\e600';
+}
 
 %icon-info-sign {
-   @extend %icon;
-   content: "\e602";
-   }
+	@extend %icon;
+	content: '\e602';
+}
 
 %icon-ok-sign {
-   @extend %icon;
-   content: "\e606";
-   }
+	@extend %icon;
+	content: '\e606';
+}
 
 %icon-search {
-   @extend %icon;
-   content: "\e607";
-   }
+	@extend %icon;
+	content: '\e607';
+}
