--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -25,7 +25,7 @@ under the License.
 ////////////////////
 $nav-bg: #0b1542;
 $examples-bg: #050a22;
-$code-bg: #0a133a;
+$code-bg: #091236;
 $code-annotation-bg: #070e2e;
 $nav-subitem-bg: #070e2e;
 $nav-active-bg: #070e2e;
